syntax = "proto3";
import "mailbox.proto";
import "google/protobuf/any.proto";
package LPS.Core.Rpc.InnerMessages;

message BoolArg
{
    bool PayLoad = 1;
}

message IntArg
{
    sint32 PayLoad = 1;
}

message FloatArg
{
    float PayLoad = 1;
}

message StringArg
{
    string PayLoad = 1;
}

message MailBoxArg
{
    MailBox PayLoad = 1;
}

message ListArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message ValueTupleArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message TupleArg
{
    repeated google.protobuf.Any PayLoad = 1;
}

message DictWithStringKeyArg
{
    map<string, google.protobuf.Any> PayLoad = 1;
}

message DictWithIntKeyArg
{
    map<sint32, google.protobuf.Any> PayLoad = 1;
}

message DictWithValueTupleKeyPair
{
    google.protobuf.Any Key = 1;
    google.protobuf.Any Value = 2; 
}

message DictWithValueTupleKeyArg
{
    repeated DictWithValueTupleKeyPair PayLoad = 1;
}

message NullArg
{
}

message JsonArg
{
    string PayLoad = 1;
}

message EntityRpc {
    uint32 RpcID = 1;
    MailBox SenderMailBox = 2;
    MailBox EntityMailBox = 3;
    string MethodName = 4;
    bool NotifyOnly = 5;
    repeated google.protobuf.Any Args = 6;
};
