syntax = "proto3";
import "mailbox.proto";
import "entity_rpc.proto";
import "google/protobuf/any.proto";
package LPS.Core.Rpc.InnerMessages;

message PropertyFullSync {
    MailBox EntityMailBox = 1;
    google.protobuf.Any PropertyTree = 2;
}

message PropertySync {
    uint32 SyncType = 1;
    MailBox EntityMailBox = 2;
    repeated string Path = 3;
    google.protobuf.Any SyncArg = 4;
};
